tests/baselines/reference/stringLiteralsWithSwitchStatements04.errors.txt
stringLiteralsWithSwitchStatements04.ts(7,10): error TS2695: Left side of comma operator is unused and has no side effects.
stringLiteralsWithSwitchStatements04.ts(9,10): error TS2695: Left side of comma operator is unused and has no side effects.
stringLiteralsWithSwitchStatements04.ts(11,10): error TS2695: Left side of comma operator is unused and has no side effects.
stringLiteralsWithSwitchStatements04.ts(11,10): error TS2678: Type '"baz"' is not comparable to type '"foo" | "bar"'.
stringLiteralsWithSwitchStatements04.ts(13,10): error TS2695: Left side of comma operator is unused and has no side effects.
stringLiteralsWithSwitchStatements04.ts(15,10): error TS2869: This expression is always truthy. Did you mean to test something else?
stringLiteralsWithSwitchStatements04.ts(17,10): error TS2869: This expression is always truthy. Did you mean to test something else?
stringLiteralsWithSwitchStatements04.ts(17,20): error TS2869: This expression is always truthy. Did you mean to test something else?
stringLiteralsWithSwitchStatements04.ts(19,10): error TS2869: This expression is always truthy. Did you mean to test something else?
stringLiteralsWithSwitchStatements04.ts(19,20): error TS2869: This expression is always truthy. Did you mean to test something else?


==== stringLiteralsWithSwitchStatements04.ts (10 errors) ====
    let x: "foo";
    let y: "foo" | "bar"; 
    
    declare function randBool(): boolean;
    
    switch (y) {
        case "foo", x:
             ~~~~~
!!! error TS2695: Left side of comma operator is unused and has no side effects.
            break;
        case x, "foo":
             ~
!!! error TS2695: Left side of comma operator is unused and has no side effects.
            break;
        case x, "baz":
             ~
!!! error TS2695: Left side of comma operator is unused and has no side effects.
             ~~~~~~~~
!!! error TS2678: Type '"baz"' is not comparable to type '"foo" | "bar"'.
            break;
        case "baz", x:
             ~~~~~
!!! error TS2695: Left side of comma operator is unused and has no side effects.
            break;
        case "baz" && "bar":
             ~~~~~
!!! error TS2869: This expression is always truthy. Did you mean to test something else?
            break;
        case "baz" && ("foo" || "bar"):
             ~~~~~
!!! error TS2869: This expression is always truthy. Did you mean to test something else?
                       ~~~~~
!!! error TS2869: This expression is always truthy. Did you mean to test something else?
            break;
        case "bar" && ("baz" || "bar"):
             ~~~~~
!!! error TS2869: This expression is always truthy. Did you mean to test something else?
                       ~~~~~
!!! error TS2869: This expression is always truthy. Did you mean to test something else?
            break;
    }
    